--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,11 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
+collections:
+  notes:
+    output: true
+    permalink: /notes/:path/
+
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -50,15 +55,16 @@ permalink: /:title/
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
-# Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
   syntax_highlighter: rouge
   syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlights'
+    css_class: 'highlight'
+    span: 
+      line_numbers: false
+    block:
+      line_numbers: false
+      start_line: 1
 
 # Set the Sass partials directory, as we're using @imports
 sass:
