--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ version: v1.2.0
 
 kramdown:
   input: GFM
-  syntax_highlighter: rouge
+  syntax_highlighter: false
   syntax_highlighter_opts:
     css_class: 'highlight'
     span: 
